@@ -2,3 +2,4 @@
 - Fixed an issue where merge tags for Confirmation Message in User Input Step evaluated to values before the workflow step.
 - Fixed an issue on the User Registration Step, where manual User Activation feed setting was sending email with activation link to User.
 - Fixed an issue on the User and Multi-User field 'Users Role Filter' setting display (but not filter save).
+- Added the red bubble inbox count display on the WP Dashboard Workflow menu item.
